--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,24 @@
+collections:
+  authors:
+    output: true
+
+defaults:
+  - scope:
+      path: ""
+      type: "authors"
+    values:
+      layout: "author"
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+  - scope:
+      path: ""
+    values:
+      layout: "default"
+
+
 # Welcome to Jekyll!
 #
 # This config file is meant for settings that affect your whole blog, values
@@ -18,19 +39,19 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Solid Apps
-email: peng.kevin@me.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Welcome! My name is Kevin and I’m a passionate iOS developer with professional experience building high quality apps. My experience range from developing appealing and responsive user interfaces to managing complex data models.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: aoenth
-github_username:  aoenth
-
-# Build settings
-theme: minima
-plugins:
-  - jekyll-feed
+# title: Solid Apps
+# email: peng.kevin@me.com
+# description: >- # this means to ignore newlines until "baseurl:"
+#   Welcome! My name is Kevin and I’m a passionate iOS developer with professional experience building high quality apps. My experience range from developing appealing and responsive user interfaces to managing complex data models.
+# baseurl: "" # the subpath of your site, e.g. /blog
+# url: "" # the base hostname & protocol for your site, e.g. http://example.com
+# twitter_username: aoenth
+# github_username:  aoenth
+# 
+# # Build settings
+# theme: minima
+# plugins:
+#   - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
