Add RSS and SEO

--- a/_config.yml
+++ b/_config.yml
@@ -50,8 +50,10 @@ defaults:
 # 
 # # Build settings
 # theme: minima
-# plugins:
-#   - jekyll-feed
+plugins:
+  - jekyll-feed
+  - jekyll-sitemap
+  - jekyll-seo-tag
 
 # Exclude from processing.
 # The following items will not be processed, by default.
