--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,7 @@ plugins:
   - jekyll-feed
   - jekyll-sitemap
   - jekyll-seo-tag
+  - jekyll-gist
 
 # Exclude from processing.
 # The following items will not be processed, by default.
